tests/errors/range-below-min.ssv
age:uint8(18..120)
25
17
